--- a/app/views/admins_backoffice/admins/edit.html.erb
+++ b/app/views/admins_backoffice/admins/edit.html.erb
@@ -1,17 +1,32 @@
 <h1>Editando os Dados do Administrador</h1>
 
-<form>
+<% if @admin.errors.any? %>
+
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <ul>
+    <% @admin.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<% end %>
+
+<%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
   <div class="form-group">
-    <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" placeholder="Digite o novo email de administrador">
+    <%= form.label :email %>
+    <%= form.text_field :email, class: "form-control", placeholder: "Digite o novo email de administrador" %>
   </div>
   <div class="form-group">
-    <label for="password">Senha</label>
-    <input type="password" class="form-control" id="password" placeholder="Digite a nova Senha">
+    <%= form.label :password %>
+    <%= form.password_field :password, class: "form-control", placeholder: "Digite a nova Senha" %>
   </div>
   <div class="form-group">
-    <label for="confirmPassword">Confirmação da Senha</label>
-    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirme a nova senha">
+    <%= form.label :password_confirmation %>
+    <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Confirme a nova senha" %>
   </div>
   <button type="submit" class="btn btn-primary">Enviar</button>
-</form>
+<% end %>
