--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -4,7 +4,11 @@
     <tr>
       <th>ID</th>
       <th>Email</th>
-      <th>Ações</th>
+      <th>
+        <%= link_to new_admins_backoffice_admin_path, class: "btn btn-success btn-circle btn-sm" do %>
+          <i class="fas fa-plus"></i>
+        <% end %>
+      </th>
     </tr>
   </thead>
   <tbody>
