--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -51,6 +51,14 @@
         <% end %>
       </li>
 
+      <!-- Nav Item - Assuntos/Áreas -->
+      <li class="nav-item">
+        <%= link_to admins_backoffice_subjects_path, method: :get, class: 'nav-link' do %>
+          <i class="fas fa-file-o"></i>
+          <span>Assuntos/Áreas</span>
+        <% end %>
+      </li>
+
     </ul>
     <!-- End of Sidebar -->
 
@@ -168,6 +176,17 @@
 
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'admins_backoffice' %>
+
+  <% if notice %>
+    <%= javascript_tag do %>
+      $.bootstrapGrowl("<%= notice %>", {
+        type: 'success', // (null, 'info', 'danger', 'success')
+        align: 'right', // ('left', 'right', or 'center')
+        allow_dismiss: true, // If true then will display a cross to close the popup.
+        stackup_spacing: 10 // spacing between consecutively stacked growls.
+      });
+    <% end %>
+  <% end %>
 
 </body>
 
