--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -20,11 +20,16 @@
         <%= link_to edit_admins_backoffice_admin_path(admin), class: "btn btn-primary btn-circle btn-sm" do %>
           <i class="fas fa-edit"></i>
         <% end %>
-        <a href="#" class="btn btn-danger btn-circle btn-sm">
+
+        <%= link_to admins_backoffice_admin_path(admin), method: :delete, class: "btn btn-danger btn-circle btn-sm", data: {confirm: "Deseja realmente excluir o administrador?"} do %>
           <i class="fas fa-trash"></i>
-        </a>
+        <% end %>
       </td>
     </tr>
   <% end %>
   </tbody>
 </table>
+
+<div class="d-flex justify-content-center">
+  <%= paginate @admins %>
+</div>
