--- a/app/views/layouts/admins_backoffice.html.erb
+++ b/app/views/layouts/admins_backoffice.html.erb
@@ -59,6 +59,14 @@
         <% end %>
       </li>
 
+      <!-- Nav Item - Questões -->
+      <li class="nav-item">
+        <%= link_to admins_backoffice_questions_path, method: :get, class: 'nav-link' do %>
+          <i class="fas fa-th-list"></i>
+          <span>Questões</span>
+        <% end %>
+      </li>
+
     </ul>
     <!-- End of Sidebar -->
 
