--- a/app/views/admins_backoffice/subjects/new.html.erb
+++ b/app/views/admins_backoffice/subjects/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Novo Administrador</h1>
+<h1>Nova</h1>
 
-<%= render partial: 'admins_backoffice/admins/shared/form' %>
+<%= render partial: 'admins_backoffice/subjects/shared/form' %>
