--- a/app/views/admins_backoffice/subjects/shared/_form.html.erb
+++ b/app/views/admins_backoffice/subjects/shared/_form.html.erb
@@ -1,8 +1,8 @@
-<% if @admin.errors.any? %>
+<% if @subject.errors.any? %>
 
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
   <ul>
-    <% @admin.errors.full_messages.each do |message| %>
+    <% @subject.errors.full_messages.each do |message| %>
     <li><%= message %></li>
     <% end %>
   </ul>
@@ -13,18 +13,10 @@
 
 <% end %>
 
-<%= form_with(model: [ :admins_backoffice, @admin ], local: true) do |form| %>
+<%= form_with(model: [ :admins_backoffice, @subject ], local: true) do |form| %>
   <div class="form-group">
-    <%= form.label :email %>
-    <%= form.text_field :email, class: "form-control", placeholder: "Digite o novo email de administrador" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :password %>
-    <%= form.password_field :password, class: "form-control", placeholder: "Digite a nova Senha" %>
-  </div>
-  <div class="form-group">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Confirme a nova senha" %>
+    <%= form.label :description %>
+    <%= form.text_field :description, class: "form-control", placeholder: "Digite um novo assunto/área" %>
   </div>
   <button type="submit" class="btn btn-primary">Enviar</button>
 <% end %>
