--- a/app/views/admins_backoffice/questions/index.html.erb
+++ b/app/views/admins_backoffice/questions/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listando as Questões</h1>
+<h1><%= t('messages.listing', model: @questions.model_name.human(count: 2) )%></h1>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -23,7 +23,8 @@
           <i class="fas fa-edit"></i>
         <% end %>
 
-        <%= link_to admins_backoffice_question_path(question), method: :delete, class: "btn btn-danger btn-circle btn-sm", data: {confirm: "Deseja realmente excluir a questão?"} do %>
+        <%= link_to admins_backoffice_question_path(question), method: :delete, 
+            class: "btn btn-danger btn-circle btn-sm", data: {confirm: t('messages.confirm_with', item: question.description.truncate(30))} do %>
           <i class="fas fa-trash"></i>
         <% end %>
       </td>
