--- a/app/views/admins_backoffice/subjects/index.html.erb
+++ b/app/views/admins_backoffice/subjects/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listando os Assuntos/Áreas</h1>
+<h1><%= t('messages.listing', model: @subjects.model_name.human(count: 2) )%></h1>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -21,7 +21,8 @@
           <i class="fas fa-edit"></i>
         <% end %>
 
-        <%= link_to admins_backoffice_subject_path(subject), method: :delete, class: "btn btn-danger btn-circle btn-sm", data: {confirm: "Deseja realmente excluir o assunto/área?"} do %>
+        <%= link_to admins_backoffice_subject_path(subject), method: :delete, 
+            class: "btn btn-danger btn-circle btn-sm", data: {confirm: t('messages.confirm_with', item: subject.description.truncate(30))} do %>
           <i class="fas fa-trash"></i>
         <% end %>
       </td>
