--- a/app/views/site/shared/_questions.html.erb
+++ b/app/views/site/shared/_questions.html.erb
@@ -1,35 +1,38 @@
 <main role="main">
   <div class="jumbotron">
     <div class="col-sm-8 mx-auto">
-      <% unless params[:term] %>          
-        <h3>Últimas perguntas cadastradas...</h3>        
-      <% else %>          
-        <h3><%= "Resultados para \"#{params[:term]}\"..."%></h3>        
-      <% end %>
+      <h3><%= msg_jumbotron %></h3>
     </div>
   </div>
 </main>
 
 <% @questions.each do |question| %>
-  <%= form_with url: site_answer_path, local: true do |form|%>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%= question.description %></h3> 
-      </div>
-      <div class="panel-body">
-        <ul>
-          <% question.answers.each do |answer| %>
-            <li style="list-style:none;">              
-              <div class="form-check">                              
-                <%= radio_button_tag 'answer', answer.id, class:"form-check-input" %>
-                <%= form.label "answer_#{answer.id}", answer.description, class:"form-check-label" %>          
-              </div>            
+  <%= form_with url: site_answer_path do |form|%>
+    <div class="card my-3">
+      <div class="card-body">
+        <div class="card-title">
+          <h3 class="mb-3">
+            <span class="badge badge-info mx-2">
+              <%= link_to "#{question.subject.description} (#{question.subject.questions_count})", site_search_subject_path(question.subject_id, question.subject.description), class:'text-white' %>
+            </span>
+            <%= question.description %>
+          </h3> 
+        </div>
+        <div class="card-text p-3">
+          <ul>
+            <% question.answers.each do |answer| %>
+              <li style="list-style:none;">              
+                <div class="form-check">                              
+                  <%= radio_button_tag 'answer_id', answer.id, class:"form-check-input" %>
+                  <%= form.label "answer_id_#{answer.id}", answer.description, class:"form-check-label" %>          
+                </div>            
+              </li>
+            <% end %>
+            <li style="list-style:none;">             
+              <%= form.submit "Responder", id:"submit_#{question.id}", class:"btn btn-primary my-3" %>          
             </li>
-          <% end %>
-          <li style="list-style:none;">             
-            <%= form.submit "Responder", class:"btn btn-success" %>          
-          </li>
-        </ul>
+          </ul>
+        </div>
       </div>
     </div>
   <% end %>
