User Devise and User Profile Edit form change

--- a/app/assets/stylesheets/users_backoffice.scss
+++ b/app/assets/stylesheets/users_backoffice.scss
@@ -5,5 +5,7 @@
  *= require bootstrap/dist/css/bootstrap.min.css
  *= require font-awesome-4.6.3/css/font-awesome.min.css
  *= require nprogress/nprogress.css
+ *= require jquery-ui/themes/base/theme
+ *= require jquery-ui/themes/base/datepicker
  *= require custom.min.css
  */
