--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,6 +7,14 @@
           <h1>Cadastrar-se</h1>
 
           <div>
+            <%= f.text_field :first_name, autofocus: true, placeholder:"Nome", class:"form-control" %>
+          </div>
+
+          <div>
+            <%= f.text_field :last_name, autofocus: true, placeholder:"Sobrenome", class:"form-control" %>
+          </div>
+
+          <div>
             <%= f.email_field :email, autofocus: true, placeholder:"Email", class:"form-control" %>
           </div>
 
